[package]
name = "mzd2"
version = "0.2.0"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23"
eframe = "0.23"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.1"
serde_json = "1"
serde_bytes = "0.11"
anyhow = "1.0"
num = "0.4"
image = "0.24"
qcell = "0.5"
slotmap = { version = "1.0", features = ["serde"] }
#egui-toast = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
lru = "0.12.1"
regex = "1.8"
rfd = "0.12"
raw-window-handle = "0.5.2"
uuid = { version = "1.7", features = ["v7", "serde"] }
scoped-tls-hkt = "0.1.4"
clap = { version = "4.5", features = ["derive"] }
filetime = "0.2"

[profile.dev.package."*"]
opt-level = 3
codegen-units = 16

[profile.dev]
opt-level = 0

[profile.dev-opti]
inherits = "dev"
opt-level = 3
codegen-units = 1
lto = true
