[package]
name = "mzd2"
version = "0.2.0"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.26"
eframe = { version = "0.26", features = ["default_fonts","glow","wayland","x11"] }
egui_dock = "0.11"
serde = { version = "1", features = ["derive"] }
#rmp-serde = "1.1"
serde_json = "1"
serde_bytes = "0.11"
anyhow = "1"
#num = "0.4"
image = "0.24"
#qcell = "0.5"
slotmap = { version = "1", features = ["serde"] }
#egui-toast = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
lru = "0.12.1"
regex = "1.8"
rfd = "0.14"
raw-window-handle = "0.6"
uuid = { version = "1.7", features = ["v7", "serde"] }
scoped-tls-hkt = "0.1.4"
clap = { version = "4.5", features = ["derive"] }
filetime = "0.2"
rand = "0.8"
indexmap = { version = "2.2", features = ["serde"] }
ahash = "0.8"
lab = "0.11"

[features]
#default = ["super_validate"] # Enable for extra validations. debug_assertions also has the be enabled. On big maps, this has severe performance impact
super_validate = []

[profile.dev.package."*"]
opt-level = 3
codegen-units = 16

[profile.dev]
opt-level = 0

[profile.dev-opti.package."*"]
opt-level = 3
codegen-units = 1

[profile.dev-opti]
inherits = "dev"
opt-level = 3
codegen-units = 1
lto = true

[profile.release]
codegen-units = 1
lto = true
