[package]
name = "mzd2"
version = "0.2.0"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = ["default_fonts","glow","wayland","x11"] }
egui_dock = "0.16"
serde = { version = "1", features = ["derive"] }
#rmp-serde = "1.1"
serde_json = "1"
#serde_bytes = "0.11"
anyhow = "1"
#num = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg","png","qoi"] }
#qcell = "0.5"
slotmap = { version = "1", features = ["serde"] }
#egui-toast = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
lru = "0.14"
regex = "1.8"
rfd = "0.15"
raw-window-handle = "0.6"
uuid = { version = "1.7", features = ["v7", "serde"] }
scoped-tls-hkt = "0.1.4"
clap = { version = "4.5", features = ["derive"] }
filetime = "0.2"
rand = "0.9"
indexmap = { version = "2.2", features = ["serde"] }
ahash = "0.8"
lab = "0.11"
egui_commonmark = "0.20"

[features]
default = ["image_formats", "avif_decoding"]

# TODO this is currently pretty non-functional in mzd2
accesskit = ["egui/accesskit", "eframe/default"]
# Enable for extra validations. debug_assertions also has the be enabled. On big maps, this has severe performance impact
super_validate = []
# Enable more image formats
image_formats = ["image/rayon","image/default-formats"]
# Enable AVIF decoding (requires libdav1d)
avif_decoding = ["image_formats","image/avif-native"]

[profile.dev.package."*"]
opt-level = 3
codegen-units = 16

[profile.dev]
opt-level = 0

[profile.dev-opti.package."*"]
opt-level = 3
codegen-units = 1

[profile.dev-opti]
inherits = "dev"
opt-level = 3
codegen-units = 1
lto = true

[profile.release]
codegen-units = 1
lto = true
